config for firebase CI deploys

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>Sadhana Goal Tracker</title>
+    <meta name="description" content="Set SMART goals and track your progress towards them over time with Sadhana Goal Tracker.">
   </head>
   <body>
     <noscript>
